--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "eslint": "^4.16.0",
-    "eslint-plugin-react": "^7.6.0"
+    "eslint-plugin-react": "^7.6.0",
+    "yargs": "^11.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
